mds: ignore ENOENT on writing backtrace

We get ENOENT when a pool doesn't exist.  This can
happen because we don't prevent people deleting
former cephfs data pools whose files may not have
had their metadata flushed yet.

http://tracker.ceph.com/issues/19401
Signed-off-by: John Spray <john.spray@redhat.com>
(cherry picked from commit 3fccc2372f2715d075b05e459140360cf6e7ca96)